--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "webpack-cli": "3.3.0"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --mode production --display-used-exports"
   }
 }
