chore: remove webpack

--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "tree-shaking-webpack",
   "sideEffects": false,
   "version": "1.0.0",
-  "main": "index.js", 
+  "main": "index.js",
   "author": "Apidcloud <luisapidcloud@hotmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "webpack": "4.29.6",
-    "webpack-cli": "3.3.0"
-  },
+  "devDependencies": {},
   "scripts": {
-    "build": "webpack --display-used-exports"
+    "build": ""
   }
 }
