--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Apidcloud <luisapidcloud@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "http-server": "0.11.1",
     "rollup": "1.7.3"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "start": "http-server -c-1 --cors -o"
   }
 }
